Updated for ngDocs, service documentation, methods

--- a/App/docs/client/html/partials/api/appAudits.html
+++ b/App/docs/client/html/partials/api/appAudits.html
@@ -3,8 +3,7 @@
 </div>
 </h1>
 <div><h2 id="usage">Usage</h2>
-<div class="usage">as attribute<pre class="prettyprint linenums">&lt;ANY app-audits&gt;
-   ...
-&lt;/ANY&gt;</pre>
+<div class="usage">as element:<pre class="prettyprint linenums">&lt;app-audits&gt;
+&lt;/app-audits&gt;</pre>
 </div>
 </div>
