--- a/App/docs/client/html/partials/api/ApiServices.html
+++ b/App/docs/client/html/partials/api/ApiServices.html
@@ -8,4 +8,13 @@
 <li><code ng:non-bindable=""><a href="#/api/AuditsService">AuditsService</a></code>
 </li>
 </ul>
+<div class="member property"><h2 id="properties">Properties</h2>
+<ul class="properties"><li><h3 id="properties_audits">audits</h3>
+<div class="audits"></div>
+</li>
+<li><h3 id="properties_widgets">widgets</h3>
+<div class="widgets"></div>
+</li>
+</ul>
+</div>
 </div>
