--- a/App/docs/client/html/partials/api/appWidgets.html
+++ b/App/docs/client/html/partials/api/appWidgets.html
@@ -3,8 +3,7 @@
 </div>
 </h1>
 <div><h2 id="usage">Usage</h2>
-<div class="usage">as attribute<pre class="prettyprint linenums">&lt;ANY app-widgets&gt;
-   ...
-&lt;/ANY&gt;</pre>
+<div class="usage">as element:<pre class="prettyprint linenums">&lt;app-widgets&gt;
+&lt;/app-widgets&gt;</pre>
 </div>
 </div>
